[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]
anchor_right = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0

[node name="LivesLabel" type="Label" parent="TopBar"]
text = "Lives: 3"

[node name="CoinsLabel" type="Label" parent="TopBar"]
text = "Coins: 0"

[node name="ScoreLabel" type="Label" parent="TopBar"]
text = "Score: 0"

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 60.0

[node name="Panel" type="Panel" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
text = "Resume"

[node name="MainMenuButton" type="Button" parent="PauseMenu/VBoxContainer"]
text = "Main Menu"

